# bda.plone.prometheusexporter

./: .gitignore  CHANGES.md  CONTRIBUTING.md  CONTRIBUTORS.rst  LICENSE.md  Makefile  README.md  instance.yaml  mx.ini  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
src/bda/plone/prometheusexporter/: configure.zcml  interfaces.py  testing.py  view.py
src/bda/plone/prometheusexporter/profiles/default/: browserlayer.xml  metadata.xml
src/bda/plone/prometheusexporter/profiles/uninstall/: browserlayer.xml
tests/: conftest.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
